--- a/index.html
+++ b/index.html
@@ -60,7 +60,18 @@
 
     <img src="uprit.png" alt="Logo">
 
-    <div class="dato"><strong>Alumna:</strong> Lizbeth Milagros Sanchez Cajavilca</div>
+        <h1>GRUPO</h1>
+
+    <h2>Integrantes</h2>
+    <div class="lista">
+        Alejo Farfán Pierina Lizbeth<br>
+        Arca Rubio Mixi<br>
+        Arca Rubio Yazzmine<br>
+        Mamani Tonconi Jose<br>
+        Sanchez Cajavilca Lizbeth
+    </div>
+
+    <hr>
     <div class="dato"><strong>Curso:</strong> Desarrollo de Entornos Web</div>
     <div class="dato"><strong>Docente:</strong> Díaz Pulido José Arturo</div>
     <div class="dato"><strong>Ciclo:</strong> VI - 2025</div>
@@ -74,3 +85,4 @@
 
 </body>
 </html>
+
