--- a/ejercicio1/inicio.html
+++ b/ejercicio1/inicio.html
@@ -1,8 +1,70 @@
-<h1>🏠 Inicio</h1>
-<p>Bienvenido al Portal Escolar. Aquí encontrarás información sobre cursos, noticias y contacto.</p>
+<h1 style="font-size: 32px; color: #2d3748; text-align: center; margin-top: 10px;">
+    🏠 Bienvenido al Portal Escolar
+</h1>
 
-<ul>
-    <li>📚 Acceso rápido a los cursos</li>
-    <li>📰 Noticias recientes del colegio</li>
-    <li>✉️ Información de contacto</li>
-</ul>
+<p style="font-size: 18px; color: #4a5568; text-align: center; width: 85%; margin: 10px auto;">
+    Este espacio está diseñado para brindar información clara y accesible sobre las principales
+    actividades del colegio, los cursos, las noticias más recientes y los medios de comunicación disponibles
+    para estudiantes, docentes y padres de familia.
+</p>
+
+<!-- SECCIÓN 1 -->
+<div style="
+    background: #edf2f7; 
+    padding: 20px; 
+    border-radius: 15px; 
+    width: 90%; 
+    margin: 25px auto; 
+    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+">
+    <h2 style="color: #2b6cb0; margin-top: 0;">
+        📘 ¿Qué encontrarás en este portal?
+    </h2>
+
+    <p style="font-size: 17px; color:#4a5568; line-height: 1.6;">
+        Este portal reúne toda la información necesaria para mantenerte informado y organizado.  
+        Algunas de las secciones más importantes que podrás visitar son:
+    </p>
+
+    <ul style="font-size: 17px; color: #2d3748; line-height: 1.6;">
+        <li>📚 Cursos: contenido académico, materiales y recursos.</li>
+        <li>📰 Noticias: comunicados y avisos del colegio.</li>
+        <li>✉️ Contacto: información útil para comunicarte con las áreas correspondientes.</li>
+    </ul>
+</div>
+
+<!-- SECCIÓN 2 -->
+<div style="
+    background: white; 
+    padding: 20px; 
+    width: 90%; 
+    margin: 25px auto; 
+    border-radius: 15px; 
+    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+">
+    <h2 style="color:#2d3748; margin-top:0;">🎯 Objetivo del Portal</h2>
+
+    <p style="font-size: 17px; color:#4a5568; line-height: 1.6;">
+        Nuestro objetivo es facilitar la comunicación entre la comunidad educativa y ofrecer 
+        un espacio ordenado y accesible donde puedas encontrar todo lo que necesitas 
+        para seguir tu aprendizaje de forma sencilla y eficiente.
+    </p>
+</div>
+
+<!-- SECCIÓN 3 -->
+<div style="
+    background: #f7fafc; 
+    padding: 20px; 
+    width: 90%; 
+    margin: 25px auto; 
+    border-radius: 15px; 
+    box-shadow: 0 4px 10px rgba(0,0,0,0.06);
+">
+    <h2 style="color:#2d3748; margin-top:0;">🎓 Mensaje para los estudiantes</h2>
+
+    <p style="font-size: 17px; color:#4a5568; line-height: 1.6;">
+        Queremos acompañarte en tu proceso de aprendizaje poniendo a tu alcance información útil,
+        recursos actualizados y contenidos que te permitan desarrollarte académica y personalmente.
+        Este portal es para ti: explóralo, úsalo y aprovéchalo al máximo.
+    </p>
+</div>
