--- a/ejercicio1/noticias.html
+++ b/ejercicio1/noticias.html
@@ -1,7 +1,74 @@
-<h1>📰 Noticias</h1>
+<h1 style="font-size: 32px; color: #2d3748; text-align: center; margin-top: 10px;">
+    📰 Noticias del Colegio
+</h1>
 
-<h3>🎓 Semana Escolar</h3>
-<p>Del 10 al 14 de diciembre se realizarán actividades académicas y culturales.</p>
+<p style="font-size: 18px; color: #4a5568; text-align: center; width: 85%; margin: 10px auto;">
+    Aquí encontrarás los comunicados y acontecimientos más recientes del colegio. 
+    Mantente informado sobre actividades, eventos, logros y avisos importantes para toda la comunidad educativa.
+</p>
 
-<h3>🏆 Concurso de Matemática</h3>
-<p>Felicitamos a los alumnos ganadores del concurso interescolar.</p>
+<!-- CONTENEDOR PRINCIPAL -->
+<div style="
+    width: 90%; 
+    margin: 25px auto;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+">
+
+    <!-- Noticia 1 -->
+    <div style="
+        background: #edf2f7;
+        padding: 20px;
+        border-radius: 12px;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+    ">
+        <h2 style="color: #2b6cb0; margin-top: 0;">🎓 Semana Escolar</h2>
+        <p style="font-size: 17px; color:#4a5568; line-height: 1.6;">
+            Del <strong>10 al 14 de diciembre</strong> se realizarán diversas actividades académicas, deportivas 
+            y culturales para promover la integración y el desarrollo de los estudiantes.  
+            Entre las actividades destacadas se encuentran:
+        </p>
+        <ul style="font-size: 17px; color:#2d3748; line-height: 1.6;">
+            <li>📘 Feria de proyectos académicos</li>
+            <li>🎭 Presentaciones artísticas</li>
+            <li>⚽ Mini olimpiadas escolares</li>
+            <li>🎨 Exposición de arte</li>
+        </ul>
+    </div>
+
+    <!-- Noticia 2 -->
+    <div style="
+        background: white;
+        padding: 20px;
+        border-radius: 12px;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+    ">
+        <h2 style="color: #d69e2e; margin-top: 0;">🏆 Concurso de Matemática</h2>
+        <p style="font-size: 17px; color:#4a5568; line-height: 1.6;">
+            Felicitamos a los estudiantes que destacaron en el concurso interescolar de matemática.  
+            Su esfuerzo, dedicación y espíritu competitivo son un orgullo para toda la institución.
+        </p>
+        <p style="font-size: 17px; color:#4a5568;">
+            🥇 Primer lugar: <strong>3° de Secundaria</strong><br>
+            🥈 Segundo lugar: <strong>1° de Secundaria</strong><br>
+            🥉 Tercer lugar: <strong>6° de Primaria</strong>
+        </p>
+    </div>
+
+    <!-- Noticia 3 adicional -->
+    <div style="
+        background: #f7fafc;
+        padding: 20px;
+        border-radius: 12px;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.06);
+    ">
+        <h2 style="color: #38a169; margin-top: 0;">🌱 Campaña Ambiental 2025</h2>
+        <p style="font-size: 17px; color:#4a5568; line-height: 1.6;">
+            El colegio iniciará una campaña de concientización sobre el cuidado del medio ambiente.  
+            Se realizarán talleres de reciclaje, limpieza de áreas verdes y charlas educativas 
+            para promover hábitos responsables.
+        </p>
+    </div>
+
+</div>
