--- a/ejercicio1/contacto.html
+++ b/ejercicio1/contacto.html
@@ -1,6 +1,24 @@
 <h1>✉️ Contacto</h1>
-<p>Para consultas o sugerencias, envía un mensaje a nuestro correo:</p>
 
-<a href="https://mail.google.com/mail/?view=cm&fs=1&to=lizbeth@colegio.edu.pe" target="_blank">
+<p>
+Si tienes alguna duda, consulta o sugerencia sobre las actividades del colegio, 
+puedes comunicarte con nosotros a través de nuestro correo institucional. 
+Estamos atentos para ayudarte en todo lo que necesites, ya sea información sobre 
+horarios, eventos, tareas, documentos o cualquier tema relacionado con la convivencia escolar.
+</p>
+
+<p>
+Agradecemos mucho tus mensajes, ya que nos permiten mejorar y ofrecer un mejor servicio 
+a toda la comunidad educativa. Cada consulta será respondida dentro del horario de atención 
+y con la mayor amabilidad posible.
+</p>
+
+<p><strong>📨 Correo institucional: lizbeth@colegio.edu.pe</strong></p>
+
+<p>
+Si deseas escribirnos ahora mismo, puedes hacerlo haciendo clic en el siguiente enlace:
+</p>
+
+<a href="mailto:lizbeth@colegio.edu.pe">
     📧 Enviar correo
 </a>
