--- a/ejercicio1/cursos.html
+++ b/ejercicio1/cursos.html
@@ -1,21 +1,81 @@
-<h1>📚 Cursos</h1>
-<p>A continuación se muestran algunos cursos del portal:</p>
+<h1 style="font-size: 32px; color: #2d3748; text-align: center; margin-top: 10px;">
+    📚 Cursos del Portal Escolar
+</h1>
 
-<table border="1" cellpadding="8">
-    <tr>
-        <th>Curso</th>
-        <th>Descripción</th>
-    </tr>
-    <tr>
-        <td>🧮 Matemática</td>
-        <td>Resolución de problemas y ejercicios.</td>
-    </tr>
-    <tr>
-        <td>✏️ Comunicación</td>
-        <td>Lectura, escritura y comprensión de textos.</td>
-    </tr>
-    <tr>
-        <td>🔬 Ciencia y Tecnología</td>
-        <td>Experimentos y conceptos científicos.</td>
-    </tr>
-</table>
+<p style="font-size: 18px; color: #4a5568; text-align: center; width: 85%; margin: 10px auto;">
+    En esta sección encontrarás información sobre los cursos principales que forman parte del desarrollo
+    académico de los estudiantes. Cada curso está diseñado para fortalecer habilidades y conocimientos
+    esenciales para su formación.
+</p>
+
+<!-- SECCIÓN 1 -->
+<div style="
+    background: #edf2f7; 
+    padding: 18px; 
+    border-radius: 12px; 
+    width: 90%; 
+    margin: 25px auto; 
+    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+">
+    <h2 style="color: #2b6cb0; margin-top: 0;">📘 Lista de cursos</h2>
+
+    <p style="font-size: 17px; color:#4a5568; line-height: 1.6;">
+        A continuación se muestran algunos de los cursos más importantes del portal, junto con una breve
+        descripción de lo que se trabaja en cada uno:
+    </p>
+
+    <table style="
+        width: 100%; 
+        border-collapse: collapse; 
+        margin-top: 15px; 
+        font-size: 17px;
+    ">
+        <tr style="background:#2d3748; color:white;">
+            <th style="padding: 10px; text-align: left;">Curso</th>
+            <th style="padding: 10px; text-align: left;">Descripción</th>
+        </tr>
+
+        <tr style="background:white;">
+            <td style="padding: 10px;">🧮 Matemática</td>
+            <td style="padding: 10px;">Resolución de problemas, razonamiento lógico y ejercicios aplicados.</td>
+        </tr>
+
+        <tr style="background:#f7fafc;">
+            <td style="padding: 10px;">✏️ Comunicación</td>
+            <td style="padding: 10px;">Comprensión lectora, redacción, ortografía y análisis de textos.</td>
+        </tr>
+
+        <tr style="background:white;">
+            <td style="padding: 10px;">🔬 Ciencia y Tecnología</td>
+            <td style="padding: 10px;">Experimentos, observación científica y descubrimiento de fenómenos naturales.</td>
+        </tr>
+
+        <tr style="background:#f7fafc;">
+            <td style="padding: 10px;">🌎 Personal Social</td>
+            <td style="padding: 10px;">Identidad, convivencia, valores y conocimiento del entorno.</td>
+        </tr>
+
+        <tr style="background:white;">
+            <td style="padding: 10px;">🎨 Arte y Cultura</td>
+            <td style="padding: 10px;">Dibujo, creatividad, expresión artística y apreciación cultural.</td>
+        </tr>
+    </table>
+</div>
+
+<!-- SECCIÓN 2 -->
+<div style="
+    background: white; 
+    padding: 20px; 
+    width: 90%; 
+    margin: 30px auto; 
+    border-radius: 12px; 
+    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+">
+    <h2 style="color:#2d3748; margin-top:0;">🎯 Importancia de los cursos</h2>
+
+    <p style="font-size: 17px; color:#4a5568; line-height: 1.6;">
+        Los cursos del portal están organizados para reforzar habilidades fundamentales y promover la curiosidad
+        por aprender. Cada área aporta conocimientos que ayudan a los estudiantes a desarrollarse de manera integral,
+        tanto en el ámbito académico como en su vida personal.
+    </p>
+</div>
