--- a/ejercicio2/index.html
+++ b/ejercicio2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal Cultural</title>
+    <title>Portal Turístico</title>
 
     <!-- Fuente moderna -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
         body {
             margin: 0;
             font-family: 'Poppins', sans-serif;
-            background-color: #e8ebf2;
+            background-color: #e8f3f7;
         }
 
         /* TABLA PRINCIPAL */
@@ -22,85 +22,75 @@
             border-collapse: collapse;
         }
 
-        /* MENÚ LATERAL */
+        /* MENÚ IZQUIERDO */
         .menu {
-            background-color: #2f3b52;
+            background-color: #004e66; /* Azul turístico */
             color: white;
-            width: 260px;
-            padding: 20px;
-            box-shadow: 2px 0 12px rgba(0,0,0,0.25);
+            width: 250px;
+            box-shadow: 2px 0 10px rgba(0,0,0,0.25);
         }
 
         .menu h2 {
             text-align: center;
-            margin-top: 0;
-            font-size: 24px;
+            padding-top: 15px;
+            font-size: 22px;
             letter-spacing: 1px;
         }
 
         .menu hr {
             border: none;
-            height: 2px;
-            background: #ffffff55;
-            margin: 18px 0;
+            border-top: 1px solid #1b6f88;
+            margin: 15px 10px;
         }
 
-        /* ENLACES DEL MENÚ */
+        /* ENLACES */
         .menu a {
+            color: white;
             text-decoration: none;
             font-size: 18px;
             display: block;
-            padding: 12px 15px;
+            padding: 12px 20px;
             border-radius: 8px;
-            margin-bottom: 10px;
+            margin: 8px 10px;
             transition: 0.3s;
-            font-weight: 500;
+            background-color: transparent;
         }
 
-        /* Colores originales */
-        .historia { color:#F4D03F; }
-        .museos { color:#5DADE2; }
-        .festivales { color:#F1948A; }
-        .artesania { color:#58D68D; }
-
-        /* Hover elegante */
         .menu a:hover {
-            background-color: #43506a;
+            background-color: #1b6f88;
             transform: translateX(6px);
         }
 
-        /* Botón volver */
+        /* BOTÓN VOLVER */
         .btn-volver {
-            background: #ffffff22;
+            background: #2ecc71;
             color: white !important;
-            text-align: center;
-            margin-top: 25px;
             padding: 10px 15px;
             border-radius: 8px;
+            text-align: center;
             display: block;
+            margin: 25px auto;
+            width: 160px;
             font-size: 16px;
+            font-weight: 600;
             transition: 0.3s;
         }
 
         .btn-volver:hover {
-            background: #ffffff44;
+            background: #27ae60;
             transform: scale(1.05);
         }
 
         /* CONTENIDO DERECHA */
         .contenido {
             background-color: #f5f5f5;
-            padding: 0;
         }
 
         iframe {
+            border: none;
             width: 100%;
             height: 100vh;
-            border: none;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
-
     </style>
 </head>
 <body>
@@ -111,23 +101,23 @@
         <!-- MENÚ IZQUIERDO -->
         <td class="menu" valign="top">
 
-            <h2>PORTAL CULTURAL</h2>
+            <h2>🌎 PORTAL TURÍSTICO</h2>
             <hr>
 
-            <a href="historia.html" target="contenido" class="historia">📜 Historia</a>
-            <a href="museos.html" target="contenido" class="museos">🏛️ Museos</a>
-            <a href="festivales.html" target="contenido" class="festivales">🎉 Festivales</a>
-            <a href="artesania.html" target="contenido" class="artesania">🧶 Artesanía</a>
+            <a href="playas.html" target="contenido">🏖️ Playas</a>
+            <a href="rutas.html" target="contenido">🚗 Rutas Turísticas</a>
+            <a href="hoteles.html" target="contenido">🏨 Hoteles</a>
+            <a href="gastronomia.html" target="contenido">🍽️ Gastronomía</a>
 
             <hr>
 
-            <a href="../index.html" class="btn-volver">⬅️ Regresar al Inicio</a>
+            <a href="../index.html" class="btn-volver">🔙 Volver</a>
 
         </td>
 
         <!-- CONTENIDO -->
         <td class="contenido">
-            <iframe name="contenido" src="historia.html"></iframe>
+            <iframe name="contenido" src="playas.html"></iframe>
         </td>
 
     </tr>
@@ -135,3 +125,4 @@
 
 </body>
 </html>
+
