--- a/ejercicio3/historia.html
+++ b/ejercicio3/historia.html
@@ -8,14 +8,74 @@
         body {
             background-color: #f3eedc;
             font-family: Verdana, sans-serif;
+            margin: 0;
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #5a3d2b;
+        }
+
+        table {
+            width: 90%;
+            margin: 20px auto;
+            border-collapse: collapse;
+            background-color: #ffffff;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+        }
+
+        th {
+            background-color: #d7c4a3;
+            padding: 12px;
+            font-size: 18px;
+            text-align: center;
+        }
+
+        td {
+            padding: 15px;
+            vertical-align: top;
+            text-align: justify;
+        }
+
+        img {
+            width: 100%;
+            border-radius: 8px;
         }
     </style>
 </head>
 <body>
 
 <h1>📜 Historia</h1>
-<p>La historia cultural recoge las tradiciones, costumbres y formas de vida que han construido la identidad de una comunidad.</p>
-<p>Incluye conocimientos ancestrales, arquitectura antigua, música tradicional y relatos que han pasado de generación en generación.</p>
+
+<table border="1">
+    <tr>
+        <th>Descripción</th>
+        <th>Imágenes</th>
+    </tr>
+
+    <tr>
+        <td>
+            <p>La historia cultural recoge las tradiciones, costumbres y formas de vida que han construido la identidad de una comunidad. Representa el legado de generaciones pasadas que han contribuido al desarrollo de nuestras sociedades modernas.</p>
+
+            <p>A través del tiempo, las civilizaciones han dejado huellas importantes: desde las primeras formas de escritura, el desarrollo de grandes imperios, la creación de monumentos arquitectónicos y la evolución de las artes, hasta los avances científicos y tecnológicos que transformaron la manera en que vivimos.</p>
+
+            <p>La historia también estudia cómo las comunidades se han organizado socialmente, cómo han enfrentado desafíos, y cómo las culturas se han mezclado y enriquecido unas con otras. Este proceso continuo permite comprender la diversidad cultural que existe en la actualidad.</p>
+
+            <p>Además, la historia nos ayuda a valorar nuestra identidad y reconocer la importancia de preservar las tradiciones, los relatos orales, la música, los bailes típicos y los conocimientos que han pasado de generación en generación.</p>
+
+            <p>Entender el pasado es fundamental para construir un mejor futuro, aprender de los errores y valorar los logros que han marcado grandes cambios en la humanidad.</p>
+        </td>
+
+        <td>
+            <img src="https://okdiario.com/img/2022/02/11/siglo-xxi.jpg" alt="Historia Imagen 1">
+            <br><br>
+            <img src="https://c.files.bbci.co.uk/5B65/production/_92679332_gettyimages-178265218.jpg" alt="Historia Imagen 2">
+        </td>
+    </tr>
+</table>
 
 </body>
 </html>
